--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,67 @@
-html 
-{
+html {
 	font-family: 'Muli', sans-serif;
+	font-size: 20px;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-h1{	
-	text-indent: 10px;	
-	font-size: 653px;
+h1 {	
+	text-indent: 5px;	
+	font-size: 65px;
 }
-body {
-    background-image: url("../images/IMG_4642.jpg");
-}
-div {
-    background-color: black;
-    padding: 15px 15px 15px 55px;
-    font-size-adjust: 50;    
-}
-p {
-	text-indent: 10px;	
+h2 {
+	font-family: "Muli", serif;
+	font-size:20px;
     padding-top: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
-    padding-left: 15px;
+    padding-left: 1px;
+    background-color: black; 	
+}
+body {
+    background-image: url("../images/IMG_4642.jpg");
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 55px;   
+}
+div {
+    padding: 5px 5px 5px 55px;
+    font-size-adjust: 50;    
+}
+
+p {
+	font-family: "Muli", serif;
+	font-size:23px;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    background-color: black; 
+}
+input {	
+	font-family: 'Montserrat', sans-serif;
+    padding-top: 5px;
+    padding-right: 65px;
+    padding-bottom: 5px;
+    padding-left: 65px;
 }
 font-family {
-	font: "Playfair Display", serif;
 	font-size: 25px;
 	font-weight: 25px;
 	font-color: white; 
-	background-color: gray;
 }
 button {
+	width: 50px;
+	height: 50px;
 	padding-top: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
     padding-left: 15px;
+    border-left: 5px;
 }
-
+button: hover;{
+	cursor: pointer;
+}
+#timer {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 50px;
+}
